# brevy

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
client/: eslint.config.js  index.html  package.json  tailwind.config.js
client/src/: main.jsx
client/src/api/: client.js
client/src/hooks/: useLinks.js
client/src/pages/: HomePage.jsx
docs/: IMPLEMENTATION_PLAN.md  OAUTH_SETUP.md  project_overview.md
scripts/: init-db.sql
services/analytics/: alembic.ini  pyproject.toml
services/analytics/alembic/: env.py  script.py.mako
services/analytics/alembic/versions/: 001_create_analytics_schema.py  002_create_clicks_table.py  003_create_stats_tables.py
services/analytics/app/: __init__.py  main.py
services/analytics/app/aggregators/: __init__.py  stats_aggregator.py
services/analytics/app/api/: __init__.py  analytics.py
services/analytics/app/consumers/: __init__.py  click_consumer.py
services/analytics/app/core/: __init__.py  config.py  database.py  observability.py
services/analytics/app/models/: __init__.py  click.py  stats.py
services/analytics/app/schemas/: __init__.py  analytics.py
services/analytics/app/services/: __init__.py  click_storage.py  geoip.py
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: README  env.py
services/api/alembic/versions/: 001_create_api_schema.py  002_create_users_table.py  003_create_links_table.py
services/api/app/: __init__.py  main.py
services/api/app/api/: redirect.py
services/api/app/api/v1/: auth.py  links.py  router.py
services/api/app/core/: __init__.py  config.py  database.py  deps.py  middleware.py  oauth.py  observability.py  rate_limit.py  redis.py  security.py
services/api/app/models/: __init__.py  link.py  user.py
services/api/app/schemas/: __init__.py  link.py  user.py
services/api/app/services/: __init__.py  link.py  user.py
